[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menu/HelpTip.gd" type="Script" id=1]
[ext_resource path="res://fonts/invasion_2000/INVASION2000.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://assets/arrow_sprites.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45.6042, 72 )

[node name="HelpTip" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 24, -112 )
rotation = 3.14276
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 356.188, 96.8527, 23.5399, 29.1473 )

[node name="Tip" type="Label" parent="."]
margin_left = -9.31498
margin_top = -82.4846
margin_right = 190.685
margin_bottom = -32.4846
custom_fonts/font = SubResource( 1 )
text = "A Tip"
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24, 24 )
shape = SubResource( 2 )

[node name="TipTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ArrowTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_entered" from="." to="." method="_on_HelpTip_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_HelpTip_body_exited"]
[connection signal="timeout" from="TipTimer" to="." method="_on_TipTimer_timeout"]
[connection signal="timeout" from="ArrowTimer" to="." method="_on_ArrowTimer_timeout"]
